--- a/PagoAgilFrba/App.config
+++ b/PagoAgilFrba/App.config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PagoAgilFrba.Properties.Settings.GD2C2017ConnectionString"
-      connectionString="Data Source=WINDOWS-MMN8E9R\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=gd;Password=gd2017"
+    <add name="PagoAgilFrba.Properties.Settings.SQLSERVER2012" connectionString="Data Source=ABM-PC\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=sa;Password=gestiondedatos"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
