--- a/PagoAgilFrba/Properties/Settings.settings
+++ b/PagoAgilFrba/Properties/Settings.settings
@@ -2,13 +2,13 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PagoAgilFrba.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="GD2C2017ConnectionString" Type="(Connection string)" Scope="Application">
+    <Setting Name="SQLSERVER2012" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=WINDOWS-MMN8E9R\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=gd;Password=gd2017&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=ABM-PC\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=sa;Password=gestiondedatos&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=WINDOWS-MMN8E9R\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=gd;Password=gd2017</Value>
+      <Value Profile="(Default)">Data Source=ABM-PC\SQLSERVER2012;Initial Catalog=GD2C2017;Persist Security Info=True;User ID=sa;Password=gestiondedatos</Value>
     </Setting>
   </Settings>
 </SettingsFile>
