--- a/PagoAgilFrba/PagoAgilFrba.csproj
+++ b/PagoAgilFrba/PagoAgilFrba.csproj
@@ -79,11 +79,11 @@
     <Compile Include="AbmEmpresa\empresaABM.Designer.cs">
       <DependentUpon>empresaABM.cs</DependentUpon>
     </Compile>
-    <Compile Include="AbmFactura\Form1.cs">
+    <Compile Include="AbmFactura\facturaABM.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AbmFactura\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AbmFactura\facturaABM.Designer.cs">
+      <DependentUpon>facturaABM.cs</DependentUpon>
     </Compile>
     <Compile Include="AbmRol\Form1.cs">
       <SubType>Form</SubType>
@@ -116,11 +116,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistroPago\Form1.cs">
+    <Compile Include="RegistroPago\RegistroPago.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RegistroPago\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="RegistroPago\RegistroPago.Designer.cs">
+      <DependentUpon>RegistroPago.cs</DependentUpon>
     </Compile>
     <Compile Include="Rendicion\Form1.cs">
       <SubType>Form</SubType>
@@ -133,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AbmEmpresa\empresaABM.resx">
       <DependentUpon>empresaABM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AbmFactura\facturaABM.resx">
+      <DependentUpon>facturaABM.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AbmSucursal\sucursalABM.resx">
       <DependentUpon>sucursalABM.cs</DependentUpon>
@@ -149,6 +152,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RegistroPago\RegistroPago.resx">
+      <DependentUpon>RegistroPago.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="GD2C2017DataSet.xsc">
       <DependentUpon>GD2C2017DataSet.xsd</DependentUpon>
     </None>
